# ChangeLog for dev-java/java-gnome
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-gnome/ChangeLog,v 1.55 2008/01/14 19:22:09 caster Exp $

  14 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  -files/4.0.3-ccache-workaround.patch, -java-gnome-4.0.3.ebuild,
  -java-gnome-4.0.4.ebuild:
  Remove old versions.

  14 Jan 2008; Christoph Mende <angelos@gentoo.org> java-gnome-4.0.5.ebuild:
  Stable on amd64 wrt bug #200448

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> java-gnome-4.0.3.ebuild,
  java-gnome-4.0.4.ebuild, java-gnome-4.0.5.ebuild:
  Restrict junit dependency.

  10 Jan 2008; nixnut <nixnut@gentoo.org> java-gnome-4.0.5.ebuild:
  Stable on ppc wrt bug 200448

  10 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  java-gnome-4.0.5.ebuild:
  stable x86, bug 200448

  10 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
  -java-gnome-2.14.3.ebuild:
  Delete old version of java-gnome.

  28 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
  java-gnome-4.0.5.ebuild:
  Add -j1 to emake calls as parellel builds don't work when gcj is detected.
  Fixes bug #200550.

  27 Nov 2007; Christoph Mende <angelos@gentoo.org> java-gnome-4.0.4.ebuild:
  Stable on amd64 wrt bug #200448

  27 Nov 2007; Markus Meier <maekke@gentoo.org> java-gnome-4.0.4.ebuild:
  x86 stable, bug #200448

*java-gnome-4.0.5 (26 Nov 2007)

  26 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
  +java-gnome-4.0.5.ebuild:
  Version bump.

  04 Nov 2007; nixnut <nixnut@gentoo.org> java-gnome-4.0.3.ebuild:
  Stable on ppc wrt bug 195689

  19 Oct 2007; Christoph Mende <angelos@gentoo.org> java-gnome-4.0.3.ebuild:
  Stable on amd64 wrt bug #195689

  14 Oct 2007; Markus Meier <maekke@gentoo.org> java-gnome-4.0.3.ebuild:
  x86 stable, bug #195689

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  java-gnome-4.0.4.ebuild:
  Added ~ppc, bug #189388

  29 Sep 2007; Petteri Räty <betelgeuse@gentoo.org>
  java-gnome-4.0.4.ebuild: