@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/java-gnome
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-gnome/ChangeLog,v 1.55 2008/01/14 19:22:09 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-gnome/ChangeLog,v 1.56 2008/01/16 19:40:34 caster Exp $
+
+  16 Jan 2008; Vlastimil Babka <caster@gentoo.org> java-gnome-4.0.5.ebuild:
+  Add pkgconfig to DEPEND to make all bonsais and kittens happy.
 
   14 Jan 2008; Vlastimil Babka <caster@gentoo.org>
   -files/4.0.3-ccache-workaround.patch, -java-gnome-4.0.3.ebuild,
